--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+dj-database-url==3.0.1
 Django==5.2.4
 djangorestframework==3.16.0
 drf-spectacular==0.28.0
